--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
